# robotframework-ibmmq

./: .gitignore  README.md  pyproject.toml
acceptance_tests/: mqtest.robot
acceptance_tests/messages/: example.json
acceptance_tests/variables/: mq_settings.yaml
docs/: IBMMQLibrary.html  mqlibrary.html
src/IBMMQLibrary/: IBMMQLibrary.py  __init__.py  exceptions.py  library.py
src/MQLibrary/: __init__.py  library.py
