[build-system]
requires = ["setuptools == 75.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-ibmmq"
version = "0.1.1"
authors = [
  { name="Niels Janssen", email="niels.janssen@uwv.nl" },
]
maintainers = [
  { name="Niels Janssen", email="niels.janssen@uwv.nl" },
]
description = "A Robotframework library for generation of test data"
keywords = ["robotframework", "ibm", "mqlibrary"]
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Test engineers",
    "Topic :: Software development :: Testing",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "robotframework (>=7.3.0,<8.3.0)",
    "ibmmq (>=2.0.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]


[project.optional-dependencies]
deploy = ["twine", "build", "wheel"]

[project.urls]
Homepage = "https://github.com/nluwv/robotframework-ibmmq"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/nluwv/robotframework-ibmmq.git"
Issues = "https://github.com/nluwv/robotframework-ibmmq/issues"
