[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"


[project]
name = "robotframework-ibmmq"
version = "0.1.3"
authors = [
  { name="Niels Janssen"},
]
maintainers = [
  { name="Niels Janssen"},
]
description = "A Robotframework library for IBM MQ"
keywords = ["robotframework", "ibm", "mqlibrary"]
readme = "README.md"
license = "EUPL-1.2"
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "robotframework (>=7.3.0,<8.3.0)",
    "ibmmq (>=2.0.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]


[project.optional-dependencies]
deploy = ["twine", "build", "wheel"]

[project.urls]
Homepage = "https://github.com/nluwv/robotframework-ibmmq"
Documentation = "https://robotframework-ibmmq.netlify.app/IBMMQLibrary.html"
Repository = "https://github.com/nluwv/robotframework-ibmmq.git"
Issues = "https://github.com/nluwv/robotframework-ibmmq/issues"

[tool.uv.build-backend]
module-name = "IBMMQLibrary"
